--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>MarketMakingGame</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
 
@@ -20,6 +21,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/BlazorStrap/blazorstrap.js"></script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
 </body>
 
 </html>
