--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -24,7 +24,7 @@
 
         #wrapper {
             min-height: 100%;
-            background-image: url('spikes.webp');
+            background-image: url('spikes.png');
         }
     </style>
 </head>
